[package]
name = "clock"
version = "0.2.0"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
license = "MIT"
description = "Simple clock"
readme = "README.md"
homepage = "https://github.com/joshleeb/clock-rs"
keywords = ["clock", "time"]
categories = ["date-and-time"]
edition = "2018"

[dependencies]
